Switch app.js to be referenced directly from the HTML vs. being injected by the C# code

--- a/src/BabylonJs.WebView/BabylonJs.WebView.Shared/www/app.html
+++ b/src/BabylonJs.WebView/BabylonJs.WebView.Shared/www/app.html
@@ -21,6 +21,7 @@
     <script src="ms-appx-web:///www/js/cannon.js"></script>
     <script src="ms-appx-web:///www/js/Oimo.js"></script>
     <script src="ms-appx-web:///www/js/babylon.2.0.js"></script>
+    <script src="ms-appx-web:///www/js/app.js"></script>
 </head>
 <body>
     <canvas id="canvas"></canvas>
